// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no refresh when at least one course exists 1`] = `
<FavoritesList
  courses={Array []}
  refresh={[Function]}
  refreshCourses={[Function]}
  refreshing={false}
/>
`;

exports[`refresh courses when empty 1`] = `
<FavoritesList
  courses={Array []}
  refresh={[Function]}
  refreshCourses={[Function]}
  refreshing={false}
/>
`;

exports[`refreshes with new props 1`] = `
<FavoritesList
  courses={Array []}
  groups={Array []}
  refresh={[Function]}
  refreshCourses={[Function]}
  refreshing={false}
/>
`;

exports[`renders correctly 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibitilityTraits="heading"
          style={
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 0,
                "paddingTop": 16,
              },
            ]
          }
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontFamily": ".SFUIDisplay-semibold",
                  "fontSize": 20,
                },
                undefined,
              ]
            }
            testID="editFavorites.courses.heading-lbl"
          >
            Courses
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`renders correctly as student 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
        Object {
          "data": Array [
            Object {
              "group_category_id": "5531",
              "id": "1",
              "members_count": 23432343,
              "name": "Red Squadron",
              "users": Array [
                Object {
                  "avatar_url": "http://www.fillmurray.com/100/100",
                  "bio": "my bio is yuuuuuuuge",
                  "id": "1",
                  "name": "Donald Trump",
                  "primary_email": "donald@trump.com",
                  "short_name": "The Donald",
                  "sortable_name": "Mr. President",
                },
              ],
            },
            Object {
              "group_category_id": "5531",
              "id": "2",
              "members_count": 23432343,
              "name": "Red Squadron",
              "users": Array [
                Object {
                  "avatar_url": "http://www.fillmurray.com/100/100",
                  "bio": "my bio is yuuuuuuuge",
                  "id": "1",
                  "name": "Donald Trump",
                  "primary_email": "donald@trump.com",
                  "short_name": "The Donald",
                  "sortable_name": "Mr. President",
                },
              ],
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.groups",
          "title": "Groups",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
        Object {
          "data": Array [
            Object {
              "group_category_id": "5531",
              "id": "1",
              "members_count": 23432343,
              "name": "Red Squadron",
              "users": Array [
                Object {
                  "avatar_url": "http://www.fillmurray.com/100/100",
                  "bio": "my bio is yuuuuuuuge",
                  "id": "1",
                  "name": "Donald Trump",
                  "primary_email": "donald@trump.com",
                  "short_name": "The Donald",
                  "sortable_name": "Mr. President",
                },
              ],
            },
            Object {
              "group_category_id": "5531",
              "id": "2",
              "members_count": 23432343,
              "name": "Red Squadron",
              "users": Array [
                Object {
                  "avatar_url": "http://www.fillmurray.com/100/100",
                  "bio": "my bio is yuuuuuuuge",
                  "id": "1",
                  "name": "Donald Trump",
                  "primary_email": "donald@trump.com",
                  "short_name": "The Donald",
                  "sortable_name": "Mr. President",
                },
              ],
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.groups",
          "title": "Groups",
        },
      ]
    }
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibitilityTraits="heading"
          style={
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 0,
                "paddingTop": 16,
              },
            ]
          }
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontFamily": ".SFUIDisplay-semibold",
                  "fontSize": 20,
                },
                undefined,
              ]
            }
            testID="editFavorites.courses.heading-lbl"
          >
            Courses
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibitilityTraits="heading"
          style={
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 0,
                "paddingTop": 16,
              },
            ]
          }
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontFamily": ".SFUIDisplay-semibold",
                  "fontSize": 20,
                },
                undefined,
              ]
            }
            testID="editFavorites.groups.heading-lbl"
          >
            Groups
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Red Squadron
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.2-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Red Squadron
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": true,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibitilityTraits="heading"
          style={
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 0,
                "paddingTop": 16,
              },
            ]
          }
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontFamily": ".SFUIDisplay-semibold",
                  "fontSize": 20,
                },
                undefined,
              ]
            }
            testID="editFavorites.courses.heading-lbl"
          >
            Courses
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`updates when courses prop changes 2`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    ItemSeparatorComponent={undefined}
    data={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": false,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onRefresh={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    onViewableItemsChanged={undefined}
    refreshControl={
      <RefreshControlMock
        onRefresh={[Function]}
        progressViewOffset={undefined}
        refreshing={false}
      />
    }
    refreshing={false}
    renderItem={[Function]}
    renderSectionHeader={[Function]}
    scrollEventThrottle={50}
    sections={
      Array [
        Object {
          "data": Array [
            Object {
              "account_id": "1",
              "course_code": "rn 101",
              "default_view": "wiki",
              "end_at": "2030-02-08T23:13:39Z",
              "enrollments": Array [
                Object {
                  "enrollment_state": "active",
                  "role": "TeacherEnrollment",
                  "role_id": "1",
                  "type": "teacher",
                  "user_id": "1",
                },
              ],
              "id": "1",
              "image_download_url": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
              "is_favorite": false,
              "name": "Learn React Native",
              "permissions": Object {
                "viewAllGrades": true,
                "viewAnalytics": true,
              },
              "short_name": "rn",
              "term": Object {
                "created_at": "2018-02-08T23:13:39Z",
                "end_at": "2030-02-08T23:13:39Z",
                "id": "1",
                "name": "Default Term",
                "start_at": "2018-02-08T23:13:39Z",
                "workflow_state": "available",
              },
              "workflow_state": "available",
            },
          ],
          "keyExtractor": [Function],
          "renderItem": [Function],
          "sectionID": "editFavorites.courses",
          "title": "Courses",
        },
      ]
    }
    stickyHeaderIndices={Array []}
    stickySectionHeadersEnabled={false}
    updateCellsBatchingPeriod={50}
    windowSize={21}
  >
    <RCTRefreshControl />
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibitilityTraits="heading"
          style={
            Array [
              Object {
                "padding": 8,
              },
              Object {
                "alignItems": "flex-end",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 0,
                "paddingTop": 16,
              },
            ]
          }
        >
          <Text
            accessibilityTraits="header"
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontFamily": ".SFUIDisplay-semibold",
                  "fontSize": 20,
                },
                undefined,
              ]
            }
            testID="editFavorites.courses.heading-lbl"
          >
            Courses
          </Text>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={
            Array [
              "selected",
              "button",
            ]
          }
          accessible={true}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
              },
              Object {
                "borderBottomColor": "#e3e3e3",
                "borderBottomWidth": 1,
              },
            ]
          }
          testID="edit-favorites.course-favorite.1-favorited"
          tvParallaxProperties={undefined}
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingHorizontal": 16,
                "paddingVertical": 16,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../src/images/star-filled.png",
                }
              }
              style={
                Array [
                  Object {
                    "height": 20,
                    "marginRight": 10,
                    "width": 20,
                  },
                  Object {
                    "tintColor": "#374A59",
                  },
                ]
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "fontWeight": "500",
                    "marginRight": 16,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Learn React Native
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      />
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;
